; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_treap.c_trp_conv_to_array_rev.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_treap.c_trp_conv_to_array_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trp_conv_to_array_rev(i64 %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__, align 4
  %4 = alloca i32*, align 8
  %5 = bitcast %struct.TYPE_3__* %3 to i64*
  store i64 %0, i64* %5, align 4
  store i32* %1, i32** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @trp_dfs(i32 %7, i32* %8)
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sub nsw i32 0, %11
  %13 = icmp eq i32 %9, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = sub nsw i32 0, %17
  ret i32 %18
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @trp_dfs(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
